--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
                     <img src="images/laz.png" alt="">
                 </div>
                 <div class="card-side card-back project-card">
-                    <h2>LazarEV.</h2>
+                    <h2>LazarEV.(clone)</h2>
                     <ul>
                       <li>Advanced analytics with data visualization</li>
                       <li>Secure login system with encrypted user data</li>
                     </ul>
-                    <a href="#" class="view-project">🔗 View Project</a>
+                    <a href="https://harshu9055.github.io/Lazarev.clone/" class="view-project">🔗 View Project</a>
                 </div>
             </div>
         </div>
