--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                       <li>Advanced analytics with data visualization</li>
                       <li>Secure login system with encrypted user data</li>
                     </ul>
-                    <a href="#" class="view-project">🔗 View Project</a>
+                    <a href="https://harshu9055.github.io/Lazarev.clone/" class="view-project">🔗 View Project</a>
                 </div>
             </div>
         </div>
