--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 <div class="card-side card-back project-card">
                     <h2>LazarEV.</h2>
                     <ul>
-                      <li>Advanced analytics with data visualization</li>
-                      <li>Secure login system with encrypted user data</li>
+                      <li>Developed a clone of the LazorEV website to enhance web development skills.</li>
+                      <li>Focused on replicating the esthetic using modern HTML, CSS, and JavaScript.</li>
                     </ul>
                     <a target="_blank" href="https://harshu9055.github.io/Lazarev.clone/" class="view-project">🔗 View Project</a>
                 </div>
@@ -164,8 +164,9 @@
                 <div class="card-side card-back project-card">
                     <h2>Suraj Engineering Works</h2>
                     <ul>
-                      <li>Advanced analytics with data visualization</li>
-                      <li>Secure login system with encrypted user data</li>
+                      <li>Built a responsive website showcasing SEW's expertise in petrol pump.</li>
+                      <li>Designed a professional layout with a focus on modern web technologies.</li>
+                      <li>Highlighted services and operations in key regions of India.</li>
                     </ul>
                     <a target="_blank" href="https://harshu9055.github.io/suraj-engineering-works/" class="view-project">🔗 View Project</a>
                 </div>
@@ -181,8 +182,8 @@
                 <div class="card-side card-back project-card">
                     <h2>RahVora</h2>
                     <ul>
-                      <li>Advanced analytics with data visualization</li>
-                      <li>Secure login system with encrypted user data</li>
+                      <li>Incorporated responsive design principles to ensure compatibility across devices.</li>
+                      <li>Utilized modern web development tools to build a feature-rich website.</li>
                     </ul>
                     <a target="_blank" href="https://harshu9055.github.io/Rahvora/" class="view-project">🔗 View Project</a>
                 </div>
@@ -198,8 +199,9 @@
                 <div class="card-side card-back project-card">
                     <h2>Portfolio</h2>
                     <ul>
-                      <li>Advanced analytics with data visualization</li>
-                      <li>Secure login system with encrypted user data</li>
+                      <li>Developed a personal portfolio to showcase projects, skills, and achievements.</li>
+                      <li>Built with a responsive layout, ensuring a seamless experience across devices</li>
+                      <li>Integrated modern design elements to highlight technical expertise and creativity.</li>
                     </ul>
                     <a target="_blank" href="https://codhar.tech/" class="view-project">🔗 View Project</a>
             </div>
