--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                     <h2>Portfolio</h2>
                     <ul>
                       <li>Developed a personal portfolio to showcase projects, skills, and achievements.</li>
-                      <li>Built with a responsive layout, ensuring a seamless experience across devices</li>
-                      <li>Integrated modern design elements to highlight technical expertise and creativity.</li>
+                      <li>Built with a responsive layout, ensuring a seamless experience across devices.</li>
+     
                     </ul>
                     <a target="_blank" href="https://codhar.tech/" class="view-project">🔗 View Project</a>
             </div>
